--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,7 @@
          - npm run build
      post_build:
        commands:
-         - aws s3 sync build/ s3://
-devtmehosting --delete
+         - aws s3 sync build/ s3://devtmehosting --delete
          - aws cloudfront create-invalidation --distribution-id E2R1H3U4I8TJEP --paths "/*"
 
    artifacts:
